Implemented some improvements. First basic unit test added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 Debug/*
 Release/*
 .settings/
+auto
+docs
+examples
+release
+test
+.gitattributes
+.gitignore
+.travis.yml
+README.md
+eclipse
+rakefile.rb
+rakefile_helper.rb
+readme.txt
